portabilidade ao github pages
agora tem um arquivo html que utiliza um iframe para capturar o index base, apenas para o site funcionar corretamente no github pages, e atualizei o cmd colocando um botão de voltar, e atualizando o código css

--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,7 @@ p{
 body{
     background-image: url('../assets/wallpaper_repeat.jpg');
     background-repeat: repeat;
+    overflow-x: hidden;
 }
 /*Estilo de elementos*/
 .espacador{
