--- a/paginas/prompt/prompt.css
+++ b/paginas/prompt/prompt.css
@@ -5,11 +5,15 @@
     padding: 0;
     font-family: 'Chivo Mono', monospace;
 }
+a{
+  text-decoration: none;
+  color: white;
+}
 body {
     min-width: 100vw;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     background-color: rgb(186, 186, 186);
 }
@@ -19,15 +23,23 @@ body {
     width: 900px;
     height: 650px;
     box-sizing: border-box;
-    margin: auto;
+    position: relative;
+    top: 15vh;
 }
   
 .console header {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background-color: #555;
+
     height: 45px;
     line-height: 45px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     text-align: center;
     color: #DDD;
 }
